# mqtt-client

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  config.sh  tags
backup/: AliPlatAuth.cpp  AliPlatAuth.h  HuaWeiPlatAuth.cpp  HuaWeiPlatAuth.h  MQAdapter.cpp  MQAdapter.h  MqttEncryptData.cpp  MqttEncryptData.h  MqttInitConfig.cpp  MqttInitConfig.h  MqttMessageMap.cpp  MqttMessageMap.h  MqttPackFormat.cpp  MqttPackFormat.h  MqttPictureToBase64.cpp  MqttPictureToBase64.h  OneNetPlatAuth.cpp  OneNetPlatAuth.h
docs/: REDEME.txt
docs/CA/: ca.crt  ca.key  ca.srl  client.crt  client.csr  client.key  info.txt  server.crt  server.csr  server.key
docs/CONFIG/: mqtt.ver  mqttconfig-v1.1.json
docs/WORD/: mqtt功能和配置汇总1.0.xlsx  北向与FCS MQ通信协议1.5.docx
include/: GlogInit.h  MqttConnectServer.h  MqttGetFcsParam.h  MqttParseFormat.h
libs/arm/jsoncpp/lib/: libjsoncpp.so.1.8.4
libs/arm/mqtt/lib/: libpaho-mqtt3a.so.1.0  libpaho-mqtt3as.so.1.0  libpaho-mqtt3c.so.1.0  libpaho-mqtt3cs.so.1.0
libs/arm/openssl/include/openssl/: opensslconf.h
libs/arm/openssl/lib/: libcrypto.so.1.0.0  libssl.so.1.0.0
libs/arm/openssl/lib_back/: libcrypto.so.1.1  libssl.so.1.1
libs/x64/boost/lib/: libboost_iostreams.so.1.68.0
libs/x64/mqtt/lib/: libpaho-mqtt3a.so.1.0  libpaho-mqtt3as.so.1.0  libpaho-mqtt3c.so.1.0  libpaho-mqtt3cs.so.1.0
libs/x64/openssl/lib/: libcrypto.so.1.0.0  libssl.so.1.0.0
script/: config.h.in  version.sh
src/: GlogInit.cpp  MqttConnectServer.cpp  MqttParseFormat.cpp  MqttStart.cpp
